--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <!-- Awalan -->
-    <h1> Kota Tangerang </h1>
+    <h1 style="text-align: center;"> Kota Tangerang </h1>
+    <br>
     <p> Kota Tangerang (bahasa Sunda: ᮒᮍᮨᮛᮀ) adalah kota yang terletak di Provinsi Banten, Indonesia.</p>
-
     <!-- List link -->
     <ul>
         <li><a href="#sejarah"> Sejarah </a></li>
