--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <!-- Awalan -->
+<header>
     <h1 style="text-align: center;"> Kota Tangerang </h1>
     <br>
     <p> Kota Tangerang (bahasa Sunda: ᮒᮍᮨᮛᮀ) adalah kota yang terletak di Provinsi Banten, Indonesia.</p>
@@ -17,13 +18,17 @@
         <li><a href="#geografis"> Geografis </a></li>
         <li><a href="#wisata"> Wisata </a></li>
     </ul>
+</header>
 
-
-    <!-- Sejarah  -->
+    <br>
+   <!-- Sejarah  -->
+<article>
     <h1 id="sejarah"> Sejarah </h1>
-    <section class="container-gambar">
+<section class="container-gambar">
     <img src="assets/Sejarah.jpg" alt=" Bundaran adipura" width="890px" height="450px">
-    </section>
+</section>
+
+<!-- Artikel Sejarah -->
     <p> Kota Tangerang merupakan kota multietnis. Kelompok etnis dari etnis lokal terdiri dari Sunda, Jawa, dan Betawi,
         sedangkan etnis yang berasal dari luar Indonesia, utamanya terdiri dari etnis Arab dan Tionghoa. Kota Tangerang
         saat ini merupakan kota multietnis karena merupakan wilayah urban Jabodetabek. Awal mula penduduk Kota Tangerang hanya beretnis Sunda. 
@@ -36,12 +41,19 @@
         sebagai alat komunikasi dan bermukim di daerah Betawi (Halim, 2011).Penduduk etnis Betawi menyebar ke sekeliling Kota Batavia, termasuk Tangerang. 
         Penduduk etnis Betawi bermukim di daerah pedalaman timur Tangerang dan daerah pesisir sebelah timur (Halim, 2011).
     </p>
+</article>
+
+    <br>
 
     <!-- Geografis -->
+<article>
     <h1 id="geografis"> Geografis </h1>
-    <section class="container-gambar">
+<section class="container-gambar">
     <img src="assets/Geografis.jpg" alt="View dari atas " width="890px" height="450px">
-    </section>
+</section>
+
+<!-- Artikel Geografis -->
+
     <p>Kota Tangerang terletak di wilayah barat laut Provinsi Banten dan berada di sisi utara Pulau Jawa. Secara astronomis, kota ini terletak 106°33'–106°44' 
         BT dan 6°05'–6°15 LS. Kota Tangerang mempunyai luas sebesar ±153,9 km².[6]. Kota ini berbatasan dengan Kabupaten Tangerang di sebelah Barat dan Utara, dengan Kota Tangerang Selatan di sisi Selatan, 
         dan dengan DKI Jakarta di sebelah Timur.
@@ -49,22 +61,28 @@
     <p>Kota Tangerang dilintasi oleh salah satu sungai terbesar di barat Pulau Jawa yaitu Sungai Cisadane. Sungai ini merupakan bagian dari identitas Kota Tangerang yang tak dapat dipisahkan. 
        Hulu sungai ini terletak di lereng Gunung Salak dan Gunung Pangrango, Bogor.
     </p>
+</article>
 
+    <br>
+<article>
     <!-- Wisata -->
      <h1 id="wisata"> Wisata </h1>
      <p> Terdapat beberapa wilayah yang terdapat wisata di kota tangerang ini, berikut lokasi dari wisatanya ;
      </p>
 
-     <h3> Wisata Belanja </h3>
-     <section class="container-gambar">
+     <h3> Wisata Belanja    </h3>
+<section class="container-gambar">
      <img src="assets/Mall.jpg" alt="TangCity Mall" width="890px" height="450px">
-     </section>
+</section>
+
+<!-- Artikel wisata -->
+
      <p>Tangerang memiliki banyak pusat perbelanjaan. Mulai dari yang sederhana hingga yang mewah.Pusat jajanan rakyat yang cukup dikenal adalah pasar lama yang terletak di pusat Kota Tangerang. 
         Pasar lama menjual berbagai makanan mulai dari daerah Babakan sampai daerah Masjid Agung Tangerang. 
         Kawasan ini memiliki berbagai varian jajanan. Ketika Ramadan, kawasan ini setiap sore hari kerap ramai pengunjung karena mencari hidangan untuk berbuka puasa.
         Sebagai kawasan permukiman kaum urban, Kota Tangerang banyak memiliki pusat perbelanjaan, baik itu pasar tradisional, hypermarket, maupun pusat perbelanjaan mewah. Beberapa pusat perbelanjaan (dalam bentuk mall)
         di Kota Tangerang antara lain: 
      </p>
-    
+</article>    
 </body>
 </html>
