--- a/main.html
+++ b/main.html
@@ -1,88 +1,146 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Kota Tangerang </title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8" />
+    <title>Halaman Profil Bandung</title>
 </head>
+
 <body>
-    <!-- Awalan -->
-<header>
-    <h1 style="text-align: center;"> Kota Tangerang </h1>
-    <br>
-    <p> Kota Tangerang (bahasa Sunda: ᮒᮍᮨᮛᮀ) adalah kota yang terletak di Provinsi Banten, Indonesia.</p>
-    <!-- List link -->
-    <ul>
-        <li><a href="#sejarah"> Sejarah </a></li>
-        <li><a href="#geografis"> Geografis </a></li>
-        <li><a href="#wisata"> Wisata </a></li>
-    </ul>
-</header>
+    <!-- HEADER -->
+    <header>
+        <h1>Bandung</h1>
+        <p>
+            Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota provinsi
+            tersebut.
+        </p>
+    </header>
+    <!-- NAVBAR -->
+    <nav>
+        <ul>
+            <li>
+                <a href="#sejarah">Sejarah</a>
+            </li>
+            <li>
+                <a href="#geografis">Geografis</a>
+            </li>
+            <li>
+                <a href="#wisata">Wisata</a>
+            </li>
+        </ul>
+    </nav>
 
-    <br>
-   <!-- Sejarah  -->
-<article>
-    <h1 id="sejarah"> Sejarah </h1>
-<section class="container-gambar">
-    <img src="assets/Sejarah.jpg" alt=" Bundaran adipura" width="890px" height="450px">
-</section>
+    <aside>
+        <article>
+            <h2 id="sejarah">Sejarah</h2>
+            <img src="assets/history.jpg" alt="Sejarah" />
+            <p>
+                Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya sungai Citarum oleh
+                lava Gunung Tangkuban Parahu yang lalu membentuk telaga. Legenda yang diceritakan oleh
+                orang-orang tua di Bandung mengatakan bahwa nama Bandung diambil dari sebuah kendaraan air
+                yang terdiri dari dua perahu yang diikat berdampingan yang disebut perahu bandung yang
+                digunakan oleh Bupati Bandung, R.A. Wiranatakusumah II, untuk melayari Ci Tarum dalam mencari
+                tempat kedudukan kabupaten yang baru untuk menggantikan ibu kota yang lama di Dayeuhkolot.
+            </p>
 
-<!-- Artikel Sejarah -->
-    <p> Kota Tangerang merupakan kota multietnis. Kelompok etnis dari etnis lokal terdiri dari Sunda, Jawa, dan Betawi,
-        sedangkan etnis yang berasal dari luar Indonesia, utamanya terdiri dari etnis Arab dan Tionghoa. Kota Tangerang
-        saat ini merupakan kota multietnis karena merupakan wilayah urban Jabodetabek. Awal mula penduduk Kota Tangerang hanya beretnis Sunda. 
-        Penduduk Sunda di Tangerang terdiri atas penduduk asli setempat, serta pendatang dari Bogor, Priangan, dan Banten (Halim, 2011).
-    </p>
-    <p>Kemudian di tahun 1526, penduduk baru dari wilayah pesisir Kesultanan Demak dan Kesultanan Cirebon datang ke Tangerang. Penduduk baru
-        tersebut berbudaya dan beretnis Jawa dan sekaligus mengiringi proses Islamisasi dan perluasan wilayah dari Kesultanan Demak dan Cirebon (Halim, 2011).
-        Mereka bermukim di daerah pesisir Tangerang sebelah barat. Keberagaman etnis penduduk Batavia di Kota Batavia merupakan dampak dari kebijakan
-        pemerintah kolonial Belanda yang melahirkan budaya Melayu Betawi dan ragam etnis. Adanya budaya Melayu karena penduduk Batavia menggunakan bahasa Melayu 
-        sebagai alat komunikasi dan bermukim di daerah Betawi (Halim, 2011).Penduduk etnis Betawi menyebar ke sekeliling Kota Batavia, termasuk Tangerang. 
-        Penduduk etnis Betawi bermukim di daerah pedalaman timur Tangerang dan daerah pesisir sebelah timur (Halim, 2011).
-    </p>
-</article>
+            <p>
+                Berdasarkan filosofi Sunda, kata Bandung juga berasal dari kalimat Nga-Bandung-an Banda
+                Indung, yang merupakan kalimat sakral dan luhur karena mengandung nilai ajaran Sunda.
+                Nga-Bandung-an artinya menyaksikan atau bersaksi. Banda adalah segala sesuatu yang berada di
+                alam hidup yaitu di bumi dan atmosfer, baik makhluk hidup maupun benda mati. Sinonim dari
+                banda adalah harta. Indung berarti Ibu atau Bumi, disebut juga sebagai Ibu Pertiwi tempat
+                Banda berada.
+            </p>
 
-    <br>
+            <h2 id="geografis">Geografis</h2>
+            <img src="assets/geografis.jpg" alt="Geografis" />
+            <p>
+                Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi wilayahnya bagaikan sebuah
+                mangkok raksasa, secara geografis kota ini terletak di tengah-tengah provinsi Jawa Barat,
+                serta berada pada ketinggian ±768 m di atas permukaan laut, dengan titik tertinggi di berada
+                di sebelah utara dengan ketinggian 1.050 meter di atas permukaan laut dan sebelah selatan
+                merupakan kawasan rendah dengan ketinggian 675 meter di atas permukaan laut.
+            </p>
 
-    <!-- Geografis -->
-<article>
-    <h1 id="geografis"> Geografis </h1>
-<section class="container-gambar">
-    <img src="assets/Geografis.jpg" alt="View dari atas " width="890px" height="450px">
-</section>
+            <p>
+                Kota Bandung dialiri dua sungai utama, yaitu Sungai Cikapundung dan Sungai Citarum beserta
+                anak-anak sungainya yang pada umumnya mengalir ke arah selatan dan bertemu di Sungai Citarum.
+                Dengan kondisi yang demikian, Bandung selatan sangat rentan terhadap masalah banjir terutama
+                pada musim hujan.
+            </p>
 
-<!-- Artikel Geografis -->
+            <h2 id="wisata">Wisata</h2>
+            <p>
+                Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan utama dalam menikmati
+                liburan akhir pekan terutama dari masyarakat yang berasal dari Jakarta sekitarnya. Selain
+                menjadi kota wisata belanja, kota Bandung juga dikenal dengan sejumlah besar bangunan lama
+                berarsitektur peninggalan Belanda.
+            </p>
 
-    <p>Kota Tangerang terletak di wilayah barat laut Provinsi Banten dan berada di sisi utara Pulau Jawa. Secara astronomis, kota ini terletak 106°33'–106°44' 
-        BT dan 6°05'–6°15 LS. Kota Tangerang mempunyai luas sebesar ±153,9 km².[6]. Kota ini berbatasan dengan Kabupaten Tangerang di sebelah Barat dan Utara, dengan Kota Tangerang Selatan di sisi Selatan, 
-        dan dengan DKI Jakarta di sebelah Timur.
-    </p>
-    <p>Kota Tangerang dilintasi oleh salah satu sungai terbesar di barat Pulau Jawa yaitu Sungai Cisadane. Sungai ini merupakan bagian dari identitas Kota Tangerang yang tak dapat dipisahkan. 
-       Hulu sungai ini terletak di lereng Gunung Salak dan Gunung Pangrango, Bogor.
-    </p>
-</article>
+            <h3>Farm House Lembang</h3>
+            <img src="assets/farm-house.jpg" alt="Farm house" />
+            <p>
+                Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata yang tidak pernah sepi
+                pengunjung. Selain karena letaknya strategis, kawasan ini juga menghadirkan nuansa wisata khas
+                Eropa. Semua itu diterapkan dalam bentuk spot swafoto Instagramable.
+            </p>
 
-    <br>
-<article>
-    <!-- Wisata -->
-     <h1 id="wisata"> Wisata </h1>
-     <p> Terdapat beberapa wilayah yang terdapat wisata di kota tangerang ini, berikut lokasi dari wisatanya ;
-     </p>
+            <h3>Observatorium Bosscha</h3>
+            <img src="assets/bosscha.jpg" alt="Bosscha" />
+            <p>
+                Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt Bimasakti, Refraktor
+                Bamberg, Cassegrain GOTO, dan Teleskop Surya. Refraktor Ganda Zeiss adalah jenis teleskop
+                terbesar untuk meneropong bintang. Benda ini diletakkan pada atap kubah sehingga saat teropong
+                digunakan, atap tersebut harus dibuka. Observatorium Bosscha boleh dikunjungi oleh siapapun,
+                tanpa tiket. Namun, bagi yang ingin menggunakan teleskop Zeiss, wajib mendaftarkan diri. Untuk
+                instansi atau lembaga pendidikan, diberikan jadwal hari Selasa sampai Jumat. Sementara itu,
+                kunjungan individu dibuka setiap hari Sabtu.
+            </p>
+        </article>
+    </aside>
 
-     <h3> Wisata Belanja    </h3>
-<section class="container-gambar">
-     <img src="assets/Mall.jpg" alt="TangCity Mall" width="890px" height="450px">
-</section>
+    <aside>
+        <article>
+            <header>
+                <h2> Kota Bandung </h2>
+                <p> Kota Kembang Paris Van Java </p>
+                <figure>
+                    <img src="assets/logo.png" />
+                    <figcaption> Lambang </figcaption>
+                </figure>
+            </header>
 
-<!-- Artikel wisata -->
+            <section>
+                <h3> Informasi Lainnya </h3>
 
-     <p>Tangerang memiliki banyak pusat perbelanjaan. Mulai dari yang sederhana hingga yang mewah.Pusat jajanan rakyat yang cukup dikenal adalah pasar lama yang terletak di pusat Kota Tangerang. 
-        Pasar lama menjual berbagai makanan mulai dari daerah Babakan sampai daerah Masjid Agung Tangerang. 
-        Kawasan ini memiliki berbagai varian jajanan. Ketika Ramadan, kawasan ini setiap sore hari kerap ramai pengunjung karena mencari hidangan untuk berbuka puasa.
-        Sebagai kawasan permukiman kaum urban, Kota Tangerang banyak memiliki pusat perbelanjaan, baik itu pasar tradisional, hypermarket, maupun pusat perbelanjaan mewah. Beberapa pusat perbelanjaan (dalam bentuk mall)
-        di Kota Tangerang antara lain: 
-     </p>
-</article>    
+                <table>
+                    <tr>
+                        <th> Negara </th>
+                        <td> Indonesia </td>
+                    </tr>
+                    <tr>
+                        <th> Hari Jadi </th>
+                        <td> 25 September 1810 </td>
+                    </tr>
+                    <tr>
+                        <th> Luas Total </th>
+                        <td> 167.67 km </td>
+                    </tr>
+                    <tr>
+                        <th> Bahasa Daerah </th>
+                        <td> Sunda </td>
+                    </tr>
+                    <tr>
+                        <th> Kode Telepon </th>
+                        <td> +62 </td>
+                    </tr>
+                </table>
+            </section>
+        </article>
+    </aside>
+    <footer>
+        <p> Belajar Dasar Pemrograman Web &copy; 2024, Dicoding Academy</p>
+    </footer>
 </body>
+
 </html>
